--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -949,154 +949,153 @@
     <!-- footer -->
         <footer>
             <div class="footer-inner">
-                <div class="footer-swipe">
-                    <div class="swipe-container">
+                <div class="footer-swipe ">
+                    <div class="swipe-container inwrap ">
                         <div class="swipe-btn">
                             <button class="swipe-prev"></button>
                             <button class="swipe-next"></button>
                         </div>
-                        <div class="swipe-slide-wrap">
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="" alt="">
-                                </a>
+                        <div class="swipe-slide-wrap ">
+                            <div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (4).png" alt="신한생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (3).png" alt="KDB생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (5).png" alt="오렌지라이프">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (6).png" alt="ABL">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (7).png" alt="DB생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (8).png" alt="메트라이프">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (10).png" alt="하나생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (9).png" alt="KB생명보험">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (12).png" alt="푸본현대생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (11).png" alt="흥국생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (14).png" alt="교보생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (13).png" alt="동양생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (16).png" alt="처브라이프생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (15).png" alt="코리안리재보험">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (18).png" alt="교보라이프플래닛">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (17).png" alt="삼성생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (19).png" alt="미래에셋생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (20).png" alt="푸르덴셜생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (21).png" alt="DGB생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (22).png" alt="라이나생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (23).png" alt="IBK연금보험">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (24).png" alt="BNP파리바카디프생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (25).png" alt="AIA생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (26).png" alt="NH농협생명">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (27).png" alt="RGA재보험 한국지점">
+                                    </a>
+                                </div>
+                                <div class="swipe-slide">
+                                    <a href="">
+                                        <img src="images/getImage (28).png" alt="한화생명">
+                                    </a>
+                                </div> 
                             </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (4).png" alt="신한생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (3).png" alt="KDB생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (5).png" alt="오렌지라이프">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (6).png" alt="ABL">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (7).png" alt="DB생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (8).png" alt="메트라이프">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (10).png" alt="하나생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (9).png" alt="KB생명보험">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (12).png" alt="푸본현대생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (11).png" alt="흥국생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (14).png" alt="교보생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (13).png" alt="동양생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (16).png" alt="처브라이프생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (15).png" alt="코리안리재보험">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (18).png" alt="교보라이프플래닛">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (17).png" alt="삼성생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (19).png" alt="미래에셋생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (20).png" alt="푸르덴셜생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (21).png" alt="DGB생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (22).png" alt="라이나생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (23).png" alt="IBK연금보험">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (24).png" alt="BNP파리바카디프생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (25).png" alt="AIA생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (26).png" alt="NH농협생명">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (27).png" alt="RGA재보험 한국지점">
-                                </a>
-                            </div>
-                            <div class="swipe-slide">
-                                <a href="">
-                                    <img src="images/getImage (28).png" alt="한화생명">
-                                </a>
-                            </div> 
                         </div>
                     </div>
                 </div>
-                <div class="footer-info">
+                <div class="footer-info inwrap clear">
                     <div class="footer-logo">
                         <img src="images/b_logo.png" alt="생명보험협회 로고">
+                        <a href=""><img src="images/btn_gongsi.png" alt="금융상품 비교공시 바로가기"></a>
+                        
                     </div>
                     <div class="footer-contents">
                         <a href="">개인정보처리방침</a>
