--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -477,8 +477,8 @@
                 <div class="section-wrap">
                 <!--1. home -->
                     <section id="section01">
-                        <div class="section-inner inwrap">
-                            <div class="section-inner-wrap">
+                        <div class="section-inner ">
+                            <div class="section-inner-wrap inwrap">
                                 <div class="title">
                                     <p>"New Value Creation"</p>
                                     <h2>생명보험 산업의 새로운 가치 창출</h2>
@@ -492,23 +492,25 @@
                                                 <span class="btn-go">바로가기 →</span>
                                                 <i></i>
                                             </a></div>
-                                            <div class="col on fav-menu"><a href="">
-                                                <h4>자주찾는 메뉴</h4>
-                                                <ul class="fav-menu-contents clear">
-                                                    <li><a href="">
-                                                        <i></i>
-                                                        <span>소비자</br>포털</span>
-                                                    </a></li>
-                                                    <li><a href="">
-                                                        <i></i>
-                                                        <span>내보험찾아줌</br>(보험가입조회)</span>
-                                                    </a></li>
-                                                    <li><a href="">
-                                                        <i></i>
-                                                        <span>설계사</br>등록/말소</span>
-                                                    </a></li>
-                                                </ul>
-                                            </a></div>
+                                            <div class="col on fav-menu">
+                                                <div>
+                                                    <h4>자주찾는 메뉴</h4>
+                                                    <ul class="fav-menu-contents clear">
+                                                        <li><a href="">
+                                                            <i></i>
+                                                            <span>소비자</br>포털</span>
+                                                        </a></li>
+                                                        <li><a href="">
+                                                            <i></i>
+                                                            <span>내보험찾아줌</br>(보험가입조회)</span>
+                                                        </a></li>
+                                                        <li><a href="">
+                                                            <i></i>
+                                                            <span>설계사</br>등록/말소</span>
+                                                        </a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col"><a href="">
                                             <i></i>
@@ -533,27 +535,25 @@
                                 </div>
                             </div>
                             <div class="board">
-                                <div class="board-inner">
+                                <div class="board-inner inwrap">
                                     <div class="notice">
                                         <h3>
                                             <a href="">공지사항</a>
                                         </h3>
                                         <div class="board-swipe">
                                             <div class="swipe-cont">
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                            </div>
-                                            <div class="swiper-btn">
-                                                <button></button>
+                                                <div><a href="">1</a></div>
+                                                <div><a href="">2</a></div>
+                                                <div><a href="">3</a></div>
+                                                <div><a href="">4</a></div>
+                                                <div><a href="">5</a></div>
+                                                <div><a href="">6</a></div>
+                                                <div><a href="">7</a></div>
+                                                <div><a href="">8</a></div>
+                                                <div><a href="">9</a></div>
                                             </div>
                                         </div>
+                                        <button class="swiper-btn"></button>
                                     </div>
                                     <div class="news">
                                         <h3>
@@ -561,20 +561,18 @@
                                         </h3>
                                         <div class="board-swipe">
                                             <div class="swipe-cont">
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                                <div><a href=""></a></div>
-                                            </div>
-                                            <div class="swiper-btn">
-                                                <button></button>
+                                                <div><a href="">1</a></div>
+                                                <div><a href="">2</a></div>
+                                                <div><a href="">3</a></div>
+                                                <div><a href="">4</a></div>
+                                                <div><a href="">5</a></div>
+                                                <div><a href="">6</a></div>
+                                                <div><a href="">7</a></div>
+                                                <div><a href="">8</a></div>
+                                                <div><a href="">9</a></div>
                                             </div>
                                         </div>
+                                        <button class="swiper-btn"></button>
                                     </div>
                                 </div>
                             </div>
@@ -582,8 +580,8 @@
                     </section>
                 <!-- 2.생명보험협회  -->
                     <section id="section02">
-                        <div class="section-inner inwrap">
-                            <div class="section-inner-wrap">
+                        <div class="section-inner ">
+                            <div class="section-inner-wrap inwrap">
                                 <h2>생명보험협회</h2>
                                 <div class="section-contents">
                                     <div class="col4 clear">
@@ -769,8 +767,8 @@
                     </section>
                 <!-- 3.소비자 -->
                     <section id="section03">
-                        <div class="section-inner inwrap">
-                            <div class="in-wrap">
+                        <div class="section-inner ">
+                            <div class="section-inner-wrap inwrap">
                                 <div class="section-contents">
                                     <div class="col3 clear">
                                         <!-- col2 -->
@@ -833,8 +831,8 @@
                     </section>
                 <!-- 4.모집종사자 -->
                     <section id="section04">
-                        <div class="section-inner inwrap">
-                            <div class="in-wrap">
+                        <div class="section-inner ">
+                            <div class="section-inner-wrap inwrap">
                                 <h2>모집종사자</h2>
                                 <div class="col4 clear">
                                     <div class="col">
@@ -900,14 +898,14 @@
                     </section>
                 <!-- 5.회원사 -->
                     <section id="section05">
-                        <div class="section-inner inwrap">
-                            <div class="in-wrap">
+                        <div class="section-inner ">
+                            <div class="section-inner-wrap inwrap">
                                 <h2>회원사</h2>
                                 <div class="col5 clear">
                                     <div class="col">
                                         <a href="">
                                             <i class="col-icon"></i>
-                                            <strong>생명보험상품</br> 광고심의</strong>
+                                            <strong class="r2">생명보험상품</br> 광고심의</strong>
                                             <p class="show">올바른 보험상품 광고문화</br> 정착의 첫걸음</p>
                                         </a>
                                     </div>
@@ -921,7 +919,7 @@
                                     <div class="col">
                                         <a href="">
                                             <i class="col-icon"></i>
-                                            <strong>생명보험협회</br> 자율규제 운영</strong>
+                                            <strong class="r2">생명보험협회</br> 자율규제 운영</strong>
                                             <p class="show">협회가 제정, 운영하는</br> 각종규정 안내</p>
                                         </a>
                                     </div>
@@ -1091,27 +1089,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer-info inwrap clear">
-                    <div class="footer-logo">
-                        <img src="images/b_logo.png" alt="생명보험협회 로고">
-                        <a href=""><img src="images/btn_gongsi.png" alt="금융상품 비교공시 바로가기"></a>
-                        
-                    </div>
-                    <div class="footer-contents">
-                        <a href="">개인정보처리방침</a>
-                        <p>(04554)서울특별시 중구 퇴계로 173, 16층(충무로3가)ㆍ 사업자등록번호 : 201-82-30608ㆍ TEL : 02-2262-6600</p>
-                        <p>
-                            상호명 : 사단법인 생명보험협회ㆍ 대표자 : 신용길   (통신판매업신고:2015-서울중구-1480 | 
-                            <a href="">확인</a>
-                        </p>
-                        <p class="copyright">Copyright ⓒ 2019 by KOREA Life Insurance Association. All Rights Reserved.</p>
+                <div class="footer-info">
+                    <div class="footer-info-wrap inwrap">
+                        <div class="footer-logo">
+                            <img src="images/b_logo.png" alt="생명보험협회 로고">
+                            <a href=""><img src="images/btn_gongsi.png" alt="금융상품 비교공시 바로가기"></a>
+                            
+                        </div>
+                        <div class="footer-contents ">
+                            <a href="">개인정보처리방침</a>
+                            <p>(04554)서울특별시 중구 퇴계로 173, 16층(충무로3가)ㆍ 사업자등록번호 : 201-82-30608ㆍ TEL : 02-2262-6600</p>
+                            <p>
+                                상호명 : 사단법인 생명보험협회ㆍ 대표자 : 신용길   (통신판매업신고:2015-서울중구-1480 | 
+                                <a href="">확인</a>
+                            </p>
+                            <p class="copyright">Copyright ⓒ 2019 by KOREA Life Insurance Association. All Rights Reserved.</p>
+                        </div>
                     </div>
                     <div class="accessibility ">
                         <a href="" class="wa"><img src="images/wa.png"></a>
                         <a href="" class="webaward"><img src="images/wa2019_winner.png"></a>
                         <a href="" class="good"><img src="images/good.png"></a>
                     </div>
-
                 </div>
             </div>
         </footer>
