--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -20,7 +20,7 @@
                     <ul class="nav-group1 clear">
                         <li>
                             <a href="">소비자</a>
-                            <ul class="nav-group2  inwrap ">
+                            <ul class="nav-group2 inwrap">
                                 <li>
                                     <ul class="nav-group3">
                                         <li><a href="">소비자포털</a></li>
@@ -241,12 +241,12 @@
                             <span class="h-btn sitemap">
                         </a>
                         <!-- 사이트맵 확장 -->
-                        <div class="hero-sitemap" style="display: none;">
+                        <div class="hero-sitemap">
                             <h1 class="header-logo">
                                 <a href=""><img src="images/logo03.png" alt="생명보험협회로고"></a>
                             </h1>
-                            <div class="sitemap-nav">
-                                <ul class="nav-group1">
+                            <div class="sitemap-nav on">
+                                <ul class="nav-group1 ">
                                     <li>
                                         <a href="">소비자</a>
                                         <ul class="nav-group2">
@@ -694,23 +694,26 @@
                                             <div class="col">
                                                 <div class="col-slide-container">
                                                     <div class="slide-img-wrap">
-                                                        <div class="slide">
-                                                            <a href=""><img src="images/getImage (1).jpg" alt=""></a>
+                                                        <div class="slide on">
+                                                            <a href=""></a>
                                                         </div>
                                                         <div class="slide">
-                                                            <a href=""><img src="images/getImage (2).jpg" alt=""></a>
+                                                            <a href=""></a>
                                                         </div>
                                                         <div class="slide">
-                                                            <a href=""><img src="images/getImage (3).jpg" alt=""></a>
+                                                            <a href=""></a>
                                                         </div>
                                                     </div>
-                                                    <div class="slide-btn">
-
-                                                    </div>
-                                                    <div class="slide-page-num">
-                                                        <button></button>
-                                                        <button></button>
-                                                        <button></button>
+                                                    <div class="slide-page-set">
+                                                        <div class="slide-btn">
+                                                            <span class="pause"></span>
+                                                        </div>
+                                                        <div class="slide-page-num">
+                                                            <span class="on"></span>
+                                                            <span></span>
+                                                            <span></span>
+                                                            <span></span>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>   
@@ -1115,7 +1118,7 @@
             </div>
         </footer>
     <!-- pagenav& pagecontroller -->
-        <div class="page-nav" style="display: none;">
+        <div class="page-nav " >
             <ul>
                 <li><a href="">
                     <span>HOME</span>
@@ -1134,7 +1137,7 @@
                 </a></li>
             </ul>
         </div>
-        <div class="page-control" style="display: none;">
+        <div class="page-control">
             <div class="btn-up"><a href=""><img src="images/btn_up.png" alt=""></a></div>
             <div class="btn-down"><a href=""><img src="images/btn_down.png" alt=""></a></div>
             <div class="btn-top"><a href=""><img src="images/btn_top.png" alt=""></a></div>
