--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>young's page</title>
+    <link rel="stylesheet" href="/style.css" />
 
     <style>
-    a { color: black; display: block;}
+      a {
+        color: black;
+        display: block;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrap">
-        <h1>young's page</h1>
+      <h1>young's page</h1>
     </div>
     <div>
-        <a href="kakao/index.html">Kakao</a>
-        <a href="jenniferSoft/index.html">Jennifer Soft</a>
-        <a href="Microsoft/index.html">Microsoft</a>
+      <a href="kakao/index.html">Kakao</a>
+      <a href="jenniferSoft/index.html">Jennifer Soft</a>
+      <a href="Microsoft/index.html">Microsoft</a>
+      <a href="/K-Life insurance/index.html">생명보험협회</a>
     </div>
-</body>
+  </body>
 </html>
